RESOLVED FIXED 253936
canvas-as-container-005.html & canvas-as-container-006.html fail
https://bugs.webkit.org/show_bug.cgi?id=253936
Summary canvas-as-container-005.html & canvas-as-container-006.html fail
Attachments
Radar WebKit Bug Importer
Comment 1 2023-03-14 23:17:51 PDT
Tim Nguyen (:ntim)
Comment 2 2023-05-27 00:29:36 PDT
I looked at this a bit more, it seems like we're just querying out of date style info when checking for focusability. If you add a `getComputedStyle(target)` call right before focusing the targets, the two tests pass.
Antti Koivisto
Comment 3 2023-09-07 08:20:24 PDT
EWS
Comment 4 2023-09-08 04:29:38 PDT
Committed 267786@main (514d0acadd36): <https://commits.webkit.org/267786@main> Reviewed commits have been landed. Closing PR #17543 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.