Cherry-pick 267786@main (514d0acadd36). https://bugs.webkit.org/show_bug.cgi?id=253936

canvas-as-container-005.html & canvas-as-container-006.html fail
    https://bugs.webkit.org/show_bug.cgi?id=253936
    rdar://106739131

    Reviewed by Alan Baradlay.

    When resolving computed style in a non-rendered subtree we fail to take container queries into account.

    * LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/canvas-as-container-005-expected.txt:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/canvas-as-container-006-expected.txt:
    * Source/WebCore/dom/Document.cpp:
    (WebCore::Document::styleForElementIgnoringPendingStylesheets):

    Take care to have updated document style if it is not clean and we are resolving the root element.

    * Source/WebCore/dom/Element.cpp:
    (WebCore::Element::resolveComputedStyle):

    - Ensure the style scope is flushed so stylesheet data is current.
    - Don't bail out when encountering display:none subtree, the ancestors may still affect its style.
    - Fall back to a full style update if we encounter a query container with invalid style in the ancestor chain.

    Canonical link: https://commits.webkit.org/267786@main

Canonical link: https://commits.webkit.org/266719.165@webkitglib/2.42